--- a/src/WebApp/Pages/ProposalForApprovals/Create.cshtml
+++ b/src/WebApp/Pages/ProposalForApprovals/Create.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-
+<div class="container">
 <h1>Create</h1>
 
 <h4>ProposalForApproval</h4>
@@ -16,8 +16,15 @@
             <div class="form-group">
                 <label asp-for="ProposalForApproval.ProposalOption" class="control-label"></label>
                 @*<input asp-for="ProposalForApproval.ProposalOption" class="form-control" />*@
-                <select asp-for="ProposalForApproval.ProposalOption" asp-items="Model.ProposalForApprovalOptions" class="form-control"></select>
+                <select asp-for="ProposalForApproval.ProposalOption" asp-items="Model.ProposalForApprovalOptions" class="form-control" onchange="showHideProposalForApprovalOthersOption()"></select>
                 <span asp-validation-for="ProposalForApproval.ProposalOption" class="text-danger"></span>
+            </div>
+            <div name="proposal_for_approval_others_Option_hidden" id="proposal_for_approval_others_Option_hidden">
+                <div class="form-group">
+                    <label asp-for="ProposalForApprovalOthersOption" class="control-label">Other Option</label>
+                    <input asp-for="ProposalForApprovalOthersOption" class="form-control" />
+                    <span asp-validation-for="ProposalForApprovalOthersOption" class="text-danger"></span>
+                </div>
             </div>
             <input type="hidden" asp-for="ProposalForApproval.NotesheetId" />
             <div class="form-group">
@@ -30,7 +37,29 @@
 <div>
     <a asp-page="/Notesheets/Edit" asp-route-id="@Model.ProposalForApproval.NotesheetId">Back</a>
 </div>
-
+    </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function () {
+            
+            document.getElementById('proposal_for_approval_others_Option_hidden').style.display = 'None';
+        });
+    </script>
+
+    <script>
+        function showHideProposalForApprovalOthersOption() {
+            //alert("Types of Bidding")
+            var travelhistory = document.getElementById('ProposalForApproval_ProposalOption')
+
+            if (travelhistory.value == "Others") {
+                document.getElementById('proposal_for_approval_others_Option_hidden').style.display = 'block';
+
+            } else {
+                document.getElementById('proposal_for_approval_others_Option_hidden').style.display = 'None';
+
+            }
+        }
+    </script>
 }
